Fix Mini Gallery logo heights & alignment. Rename to mini-gallery.html

--- a/content/_sass/partials/home/_mini-gallery.scss
+++ b/content/_sass/partials/home/_mini-gallery.scss
@@ -5,6 +5,8 @@
   margin: 0 auto;
 
   img {
+    height: 100px;
+    object-fit: scale-down;
     width: 160px;
   }
 }
@@ -13,6 +15,7 @@
   margin: 20px;
   max-height: 120px;
   overflow: hidden;
+  max-width: 160px;
 }
 
 @include media-breakpoint-up(md) {
@@ -22,7 +25,60 @@
   }
 
   .mini-gallery-img-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
     margin: 20px;
     max-height: 100px;
   }
 }
+
+.min-gallery-img {
+  max-width: 160px;
+}
+
+// Fixes for specific images
+
+.mini-gallery {
+  #manchester-escience-lab {
+    height: 140px;
+    width: 160px;
+  }
+
+  #elixir-container {
+    background: $black;
+    overflow: visible;
+  }
+
+  #elixir {
+    background: $black;
+    height: 80px;
+    position: relative;
+    top: 10px;
+  }
+
+  #msk-access {
+    height: 100px;
+    max-width: initial;
+    position: relative;
+    right: 20px;
+    width: 200px;
+  }
+
+  #pubseq {
+    height: auto;
+    object-fit: cover;
+    position: relative;
+    width: 160px;
+  }
+}
+
+@include media-breakpoint-up(sm) {
+  .mini-gallery {
+    #manchester-escience-lab-container {
+      max-height: 130px;
+      overflow: hidden;
+    }
+  }
+}
+
